# QtMpu6050

./: .gitignore  CMakeLists.txt  README.md  backends.cpp  backends.h  mpu6050.cpp  mpu6050.h  mpu6050.json  mpu6050.pro  plugin.cpp  plugin.h  timersensorbackend.cpp  timersensorbackend.h
